--- a/main.tex
+++ b/main.tex
@@ -16,8 +16,8 @@
 \usepackage{amsthm}
 \usepackage{booktabs}
 \usepackage{graphicx}
+\graphicspath{ {images/} }
 \usepackage{float}
-\usepackage{indentfirst}
 \usepackage [T1]{fontenc}
 \usepackage{listings}
 \usepackage{color}
@@ -36,6 +36,8 @@
 \usepackage{acro}
 \usepackage[a4paper,includeall,margin=2cm,marginparsep=0cm,marginparwidth=0cm,left=3cm,right=2cm,top=2cm,bottom=2cm]{geometry}
 \usepackage[font={footnotesize,it}, labelfont=bf]{caption}
+\usepackage{float}
+
 
 \setlength{\parskip}{10pt} % Abstand zwischen den Absätzen
 \setlength{\parindent}{0pt} %Erstzeileneinzug 
@@ -90,12 +92,7 @@
 
 \tableofcontents
 
-\chapter*{Abstract}
-As a non-parametric estimation tool, decision trees attract attention in the economics literature. Yet, decision trees suffer from high variance and, for prediction purposes higher variance seems to be a crucial problem, thus, several improvements were proposed such as bootstrap aggregation, boosting and most importantly random forests. In this project, while the main focus is being on the random forest, The elements of statistical learning by \cite{friedman2001elements} \cite{varian2014big} \cite{maimon2005data}, \cite{louppe2014understanding} and as expected \cite{breiman2001random} are the main literature that will be utilized in this project.
-
-To explain the concept of random forests in full extent, primarily decision trees should be discussed. Exploiting the main idea and struggles with bias-variance trade-off, random forests' importance can be emphasized as a more stable prediction tool \cite{maimon2005data}. Conceptual comparison of random forests with bagging and boosting can deliver a better understanding of its unique features as \cite{lee2019bootstrap} shows in a similar fashion. To get a further understanding, random forests’ estimation process can be mathematical explained \cite{biau2012analysis} and likewise, examining the consistency of estimator and showing the properties can be included \cite{breiman2004consistency}, \cite{denil2014narrowing}. Also, variable importance in the tree growing process is another area that needs to be delved into \cite{ishwaran2007variable} and \cite{louppe2013understanding}.
-
-
+\include{chapters/abstract}
 
 % /frontmatter -> Turn on normal numbering 
 \mainmatter
