--- a/references.bib
+++ b/references.bib
@@ -1490,3 +1490,39 @@ year = {2011}
   pages={3--28},
   year={2014}
 }
+@book{breiman1984classification,
+  title={Classification and Regression Trees},
+  author={Breiman, L. and Friedman, J. and Stone, C.J. and Olshen, R.A.},
+  isbn={9780412048418},
+  lccn={83019708},
+  series={The Wadsworth and Brooks-Cole statistics-probability series},
+  url={https://books.google.de/books?id=JwQx-WOmSyQC},
+  year={1984},
+  publisher={Taylor \& Francis}
+}
+
+@misc{scikitTree,
+  author = {scikit-learn developers},
+  title = {1.10. Decision Trees},
+  year = 2019,
+  url = {https://scikit-learn.org/stable/modules/tree.html},
+  urldate = {2019-12-02}
+}
+
+@article{shannon1948information,
+  abstract = {The recent development of various methods of modulation such as PCM and PPM which exchange bandwidth for signal-to-noise ratio has intensified the interest in a general theory of communication. A basis for such a theory is contained in the important papers of Nyquist1 and Hartley2 on this subject. In the present paper we will extend the theory to include a number of new factors, in particular the effect of noise in the channel, and the savings possible due to the statistical structure of the original message and due to the nature of the final destination of the information.},
+  author = {Shannon, Claude Elwood},
+  description = {A mathematical theory of communication - Nokia Bell Labs Journals & Magazine},
+  issn = {0005-8580},
+  journal = {The Bell System Technical Journal},
+  keywords = {information_theory mathematics},
+  month = {July},
+  number = 3,
+  pages = {379-423},
+  timestamp = {2019-11-21T16:07:09.000+0100},
+  title = {A mathematical theory of communication},
+  url = {https://ieeexplore.ieee.org/document/6773024},
+  volume = 27,
+  year = 1948
+}
+
