Finished application of random forest

--- a/references.bib
+++ b/references.bib
@@ -251,21 +251,6 @@ title = {{The Ontology Lookup Service, a lightweight cross-platform tool for con
 volume = {7},
 year = {2006}
 }
-@article{Davidson1995,
-abstract = {Scientific data of importance to biologists reside in a number of different data  sources, such as GenBank, GSDB, SWISS-PROT, EMBL, and OMIM, among many others. Some of these data sources are conventional databases implemented using database management systems (DBMSs) and others are structured files maintained in a number of different formats (e.g., ASN.1 and ACE). In addition, software packages such as sequence analysis packages (e.g., BLAST and FASTA) produce data and can therefore be viewed as data sources. To counter the increasing dispersion and heterogeneity of data, different approaches to integrating these data sources are appearing throughout the bioinformatics community. This paper surveys the technical challenges to integration, classifies the approaches, and critiques the available tools and methodologies.},
-author = {Davidson, S B and Overton, C and Buneman, P},
-doi = {10.1089/cmb.1995.2.557},
-issn = {1066-5277 (Print)},
-journal = {Journal of computational biology : a journal of computational molecular cell biology},
-keywords = {Chromosomes, Artificial, Yeast,Data Interpretation, Statistical,Database Management Systems,Databases, Factual,Humans,Mathematics,Models, Genetic,Molecular Biology,Polymerase Chain Reaction,Repetitive Sequences, Nucleic Acid,Sequence Tagged Sites,Software},
-language = {eng},
-number = {4},
-pages = {557--572},
-pmid = {8634908},
-title = {{Challenges in integrating biological data sources.}},
-volume = {2},
-year = {1995}
-}
 @article{Davis2017,
 abstract = {The Comparative Toxicogenomics Database (CTD; http://ctdbase.org/) provides information about interactions between environmental chemicals and gene products and their relationships to diseases. Chemical-gene, chemical-disease and gene-disease interactions manually curated from the literature are integrated to generate expanded networks and predict many novel associations between different data types. CTD now contains over 15 million toxicogenomic relationships. To navigate this sea of data, we added several new features, including DiseaseComps (which finds comparable diseases that share toxicogenomic profiles), statistical scoring for inferred gene-disease and pathway-chemical relationships, filtering options for several tools to refine user analysis and our new Gene Set Enricher (which provides biological annotations that are enriched for gene sets). To improve data visualization, we added a Cytoscape Web view to our ChemComps feature, included color-coded interactions and created a 'slim list' for our MEDIC disease vocabulary (allowing diseases to be grouped for meta-analysis, visualization and better data management). CTD continues to promote interoperability with external databases by providing content and cross-links to their sites. Together, this wealth of expanded chemical-gene-disease data, combined with novel ways to analyze and view content, continues to help users generate testable hypotheses about the molecular mechanisms of environmental diseases.},
 author = {Davis, Allan Peter and Grondin, Cynthia J. and Johnson, Robin J. and Sciaky, Daniela and King, Benjamin L. and McMorran, Roy and Wiegers, Jolene and Wiegers, Thomas C. and Mattingly, Carolyn J.},
@@ -1500,7 +1485,6 @@ year = {2011}
   year={1984},
   publisher={Taylor \& Francis}
 }
-
 @misc{scikitTree,
   author = {scikit-learn developers},
   title = {1.10. Decision Trees},
@@ -1508,7 +1492,6 @@ year = {2011}
   url = {https://scikit-learn.org/stable/modules/tree.html},
   urldate = {2019-12-02}
 }
-
 @article{shannon1948information,
   abstract = {The recent development of various methods of modulation such as PCM and PPM which exchange bandwidth for signal-to-noise ratio has intensified the interest in a general theory of communication. A basis for such a theory is contained in the important papers of Nyquist1 and Hartley2 on this subject. In the present paper we will extend the theory to include a number of new factors, in particular the effect of noise in the channel, and the savings possible due to the statistical structure of the original message and due to the nature of the final destination of the information.},
   author = {Shannon, Claude Elwood},
@@ -1525,4 +1508,11 @@ year = {2011}
   volume = 27,
   year = 1948
 }
-
+@misc{titanicData,
+    title = {Titanic: Machine Learning from Disaster},
+    url = {https://www.kaggle.com/c/titanic/data}
+}
+@misc{githubApplication,
+    title = {Research Module Application},
+    url = {https://github.com/RaRedmer/Research_Module_Application}
+}
