--- a/references.bib
+++ b/references.bib
@@ -689,7 +689,7 @@ title = {{Utilization of causal reasoning of hepatic gene expression in rats to 
 volume = {137},
 year = {2014}
 }
-@article{Law2014,
+@article{Zhou2014DrugBank,
 abstract = {DrugBank (http://www.drugbank.ca) is a comprehensive online database containing extensive biochemical and pharmacological information about drugs, their mechanisms and their targets. Since it was first described in 2006, DrugBank has rapidly evolved, both in response to user requests and in response to changing trends in drug research and development. Previous versions of DrugBank have been widely used to facilitate drug and in silico drug target discovery. The latest update, DrugBank 4.0, has been further expanded to contain data on drug metabolism, absorption, distribution, metabolism, excretion and toxicity (ADMET) and other kinds of quantitative structure activity relationships (QSAR) information. These enhancements are intended to facilitate research in xenobiotic metabolism (both prediction and characterization), pharmacokinetics, pharmacodynamics and drug design/discovery. For this release, {\textgreater}1200 drug metabolites (including their structures, names, activity, abundance and other detailed data) have been added along with {\textgreater}1300 drug metabolism reactions (including metabolizing enzymes and reaction types) and dozens of drug metabolism pathways. Another 30 predicted or measured ADMET parameters have been added to each DrugCard, bringing the average number of quantitative ADMET values for Food and Drug Administration-approved drugs close to 40. Referential nuclear magnetic resonance and MS spectra have been added for almost 400 drugs as well as spectral and mass matching tools to facilitate compound identification. This expanded collection of drug information is complemented by a number of new or improved search tools, including one that provides a simple analyses of drug-target, -enzyme and -transporter associations to provide insight on drug-drug interactions.},
 author = {Law, Vivian and Knox, Craig and Djoumbou, Yannick and Jewison, Tim and Guo, An Chi and Liu, Yifeng and MacIejewski, Adam and Arndt, David and Wilson, Michael and Neveu, Vanessa and Tang, Alexandra and Gabriel, Geraldine and Ly, Carol and Adamjee, Sakina and Dame, Zerihun T. and Han, Beomsoo and Zhou, You and Wishart, David S.},
 doi = {10.1093/nar/gkt1068},
@@ -1514,5 +1514,60 @@ year = {2011}
 }
 @misc{githubApplication,
     title = {Research Module Application},
-    url = {https://github.com/RaRedmer/Research_Module_Application}
+    url = {https://github.com/RaRedmer/Research_Module_Application}    
+}@article{Breiman1996OUT-OF-BAG-E,
+  title={OUT-OF-BAG ESTIMATION},
+  author={Leo Breiman},
+  year={1996}
+}
+@article{scikit2011learn,
+ title={Scikit-learn: Machine Learning in {P}ython},
+ author={Pedregosa, F. and Varoquaux, G. and Gramfort, A. and Michel, V.
+         and Thirion, B. and Grisel, O. and Blondel, M. and Prettenhofer, P.
+         and Weiss, R. and Dubourg, V. and Vanderplas, J. and Passos, A. and
+         Cournapeau, D. and Brucher, M. and Perrot, M. and Duchesnay, E.},
+ journal={Journal of Machine Learning Research},
+ volume={12},
+ pages={2825--2830},
+ year={2011}
+}
+@book{criminisi2012decision,
+author = {Criminisi, Antonio and Shotton, Jamie and Konukoglu, Ender},
+title = {Decision Forests: A Unified Framework for Classification, Regression, Density Estimation, Manifold Learning and Semi-Supervised Learning},
+booktitle = {Foundations and Trends® in Computer Graphics and Vision},
+year = {2012},
+month = {January},
+publisher = {NOW Publishers},
+url = {https://www.microsoft.com/en-us/research/publication/decision-forests-a-unified-framework-for-classification-regression-density-estimation-manifold-learning-and-semi-supervised-learning/},
+pages = {81-227},
+volume = {7},
+edition = {Foundations and Trends® in Computer Graphics and Vision: Vol. 7: No 2-3, pp 81-227},
+number = {2-3},
+}
+@article{gerard2016foresttour,
+  TITLE = {A random forest guided tour},
+  AUTHOR = {Biau, Gerard and Scornet, Erwan},
+  URL = {https://hal.sorbonne-universite.fr/hal-01307105},
+  JOURNAL = {{Test}},
+  PUBLISHER = {{Spanish Society of Statistics and Operations Research/Springer}},
+  PAGES = {1-31},
+  YEAR = {2016},
+}
+@article{domingos2000decomposition,
+  author    = {Pedro M. Domingos},
+  title     = {A Unified Bias-Variance Decomposition for Zero-One and Squared Loss},
+  year      = {2000},
+  url       = {http://www.aaai.org/Library/AAAI/2000/aaai00-086.php},
+}
+@article{friedman1997zeroLoss,
+  author={Jerome H. Friedman},
+  title={On Bias, Variance, 0/1—Loss, and the Curse-of-Dimensionality},
+  year={1997},
+  url={https://link.springer.com/article/10.1023/A:1009778005914},
+}
+@article{freund1997boosting,
+author = {Freund, Yoav and Schapire, Robert E},
+title = {A Decision-Theoretic Generalization of On-Line Learning and an Application to Boosting},
+year = {1997},
+url = {https://doi.org/10.1006/jcss.1997.1504},
 }
