Add reference for bagging

--- a/references.bib
+++ b/references.bib
@@ -1581,3 +1581,12 @@ title = {A Decision-Theoretic Generalization of On-Line Learning and an Applicat
 year = {1997},
 url = {https://doi.org/10.1006/jcss.1997.1504},
 }
+@article{breiman1996bagging,
+title = {Bagging Predictors},
+author = {Breiman, Leo},
+journal={Machine learning},
+volume={24},
+pages={123--140},
+year = {1996},
+url = {https://doi.org/10.1023/A:1018054314350}
+}
