Add new reference in bip file

--- a/references.bib
+++ b/references.bib
@@ -1590,3 +1590,16 @@ pages={123--140},
 year = {1996},
 url = {https://doi.org/10.1023/A:1018054314350}
 }
+@article{CGV-035,
+url = {http://dx.doi.org/10.1561/0600000035},
+year = {2012},
+volume = {7},
+pages = {105--128},
+journal = {Foundations and Trends® in Computer Graphics and Vision},
+title = {Decision Forests: A Unified Framework for Classification, Regression, Density Estimation, Manifold Learning and Semi-Supervised Learning},
+doi = {10.1561/0600000035},
+issn = {1572-2740},
+number = {2–3},
+pages = {81-227},
+author = {Antonio Criminisi and Jamie Shotton and Ender Konukoglu}
+}
