--- a/references.bib
+++ b/references.bib
@@ -1602,4 +1602,13 @@ issn = {1572-2740},
 number = {2–3},
 pages = {81-227},
 author = {Antonio Criminisi and Jamie Shotton and Ender Konukoglu}
+
+@book{James2013,
+  author = {James, Gareth and Witten, Daniela and Hastie, Trevor and Tibshirani, Robert},
+  publisher = {Springer},
+  timestamp = {2019-10-12T23:45:37.000+0200},
+  title = {An Introduction to Statistical Learning: with Applications in R },
+  url = {https://faculty.marshall.usc.edu/gareth-james/ISL/},
+  year = {2013}
+}
 }
