Added fixes in math part.

--- a/references.bib
+++ b/references.bib
@@ -1602,7 +1602,7 @@ issn = {1572-2740},
 number = {2–3},
 pages = {81-227},
 author = {Antonio Criminisi and Jamie Shotton and Ender Konukoglu}
-
+}
 @book{James2013,
   author = {James, Gareth and Witten, Daniela and Hastie, Trevor and Tibshirani, Robert},
   publisher = {Springer},
@@ -1611,4 +1611,17 @@ author = {Antonio Criminisi and Jamie Shotton and Ender Konukoglu}
   url = {https://faculty.marshall.usc.edu/gareth-james/ISL/},
   year = {2013}
 }
+@book{zhou2012ensemble,
+  title={Ensemble methods: foundations and algorithms},
+  author={Zhou, Zhi-Hua},
+  year={2012},
+  publisher={Chapman and Hall/CRC}
+}
+@inproceedings{kohavi1996bias,
+  title={Bias plus variance decomposition for zero-one loss functions},
+  author={Kohavi, Ron and Wolpert, David H and others},
+  booktitle={ICML},
+  volume={96},
+  pages={275--83},
+  year={1996}
 }
