Added (James, 2003) in the references.

--- a/references.bib
+++ b/references.bib
@@ -1625,3 +1625,13 @@ author = {Antonio Criminisi and Jamie Shotton and Ender Konukoglu}
   pages={275--83},
   year={1996}
 }
+@article{james2003variance,
+  title={Variance and bias for general loss functions},
+  author={James, Gareth M},
+  journal={Machine learning},
+  volume={51},
+  number={2},
+  pages={115--135},
+  year={2003},
+  publisher={Springer}
+}
