Corrected references in appendix.

--- a/references.bib
+++ b/references.bib
@@ -1635,3 +1635,17 @@ author = {Antonio Criminisi and Jamie Shotton and Ender Konukoglu}
   year={2003},
   publisher={Springer}
 }
+@incollection{wolpert2018relationship,
+  title={The relationship between PAC, the statistical physics framework, the Bayesian framework, and the VC framework},
+  author={Wolpert, David H},
+  booktitle={The mathematics of generalization},
+  pages={117--214},
+  year={2018},
+  publisher={CRC Press}
+}
+@phdthesis{geurts2002contributions,
+  title={Contributions to decision tree induction: bias/variance tradeoff and time series classification},
+  author={Geurts, Pierre},
+  year={2002},
+  school={University of Li{\`e}ge Belgium}
+}
