--- a/main.tex
+++ b/main.tex
@@ -1,6 +1,7 @@
 \documentclass[12pt,a4paper]{scrartcl}
 \usepackage[utf8]{inputenc}
 \usepackage[english]{babel}
+\usepackage{dsfont}
 \usepackage{csquotes}
 \usepackage{makeidx}
 \usepackage[left=3cm,right=2cm,top=2cm,bottom=2cm]{geometry}
