Added new figures and tex-file for simulation

--- a/main.tex
+++ b/main.tex
@@ -85,6 +85,8 @@
 
 	\include{chapters/random_forest}
 
+	\include{chapters/simulation}
+
 	\include{chapters/comparison}
 
 	\include{chapters/conclusion}
