--- a/main.tex
+++ b/main.tex
@@ -28,7 +28,7 @@
     linktoc=all,     %set to all if you want both sections and subsections linked
     linkcolor=blue,  %choose some color if you want links to stand out
 }
-
+\urlstyle{same}
 
 
 
