Changed reference color to blue

--- a/main.tex
+++ b/main.tex
@@ -26,7 +26,9 @@
 \hypersetup{
     colorlinks=true, %set true if you want colored links
     linktoc=all,     %set to all if you want both sections and subsections linked
-    linkcolor=blue,  %choose some color if you want links to stand out
+    urlcolor=blue,
+    citecolor=blue,
+    linkcolor=blue, %choose some color if you want links to stand out
 }
 \urlstyle{same}
 
