--- a/main.tex
+++ b/main.tex
@@ -20,6 +20,8 @@
 \usepackage{float}
 \usepackage{lipsum}
 \usepackage[]{biblatex}
+\usepackage[ruled, vlined]{algorithm2e}
+
 \addbibresource{references.bib}
 \usepackage{color}   %May be necessary if you want to color links
 \usepackage{hyperref}
