Add variable importances derived from totally randomized tree ensembles

--- a/main.tex
+++ b/main.tex
@@ -26,7 +26,14 @@
 \usepackage[ruled, vlined]{algorithm2e}
 
 \usepackage{newclude}
-
+\usepackage{calrsfs}
+\DeclareMathAlphabet{\pazocal}{OMS}{zplm}{m}{n}
+\newcommand{\Xa}{\mathcal{X}}
+\newcommand{\Xb}{\pazocal{X}}
+\newcommand{\Pa}{\mathcal{P}}
+\newcommand{\Pb}{\pazocal{P}}
+\newcommand{\Ya}{\mathcal{Y}}
+\newcommand{\Yb}{\pazocal{Y}}
 
 \hypersetup{
     colorlinks=true, %set true if you want colored links
