Add new reference Kohavi and John 1997 for variable importance

--- a/references.bib
+++ b/references.bib
@@ -1649,3 +1649,23 @@ author = {Antonio Criminisi and Jamie Shotton and Ender Konukoglu}
   year={2002},
   school={University of Li{\`e}ge Belgium}
 }
+
+@article{kohavi1997importance,
+author = {Kohavi, Ron and John, George H.},
+title = {Wrappers for Feature Subset Selection},
+year = {1997},
+issue_date = {December 1997},
+publisher = {Elsevier Science Publishers Ltd.},
+address = {GBR},
+volume = {97},
+number = {1–2},
+issn = {0004-3702},
+url = {https://doi.org/10.1016/S0004-3702(97)00043-X},
+doi = {10.1016/S0004-3702(97)00043-X},
+journal = {Artif. Intell.},
+month = dec,
+pages = {273–324},
+numpages = {52},
+keywords = {feature seleciton, wrapper, filter, classification}
+}
+  
