Added bias-variance decomposition for simulation.

--- a/main.tex
+++ b/main.tex
@@ -59,7 +59,7 @@
 		\centering
 		University of Bonn
 		
-		 Master Programme in Economics
+		Master of Science in Economics
 		\vspace{1in}
 		\vspace{1in}
 		
@@ -84,12 +84,11 @@
 		
 	\end{titlepage}
 	
-
+	\include*{chapters/abstract}
+	\newpage	
 	\tableofcontents
 	\thispagestyle{empty}
 	\newpage
-
-	%\include{chapters/abstract}
 
 	\pagenumbering{arabic}
 
@@ -101,13 +100,15 @@
 
 	\include*{chapters/simulation}
 
+	\include*{chapters/simulation_bias_var}
+
 	\include*{chapters/comparison}
 
 %	\include*{chapters/conclusion}
 	% \newpage
 	\include*{chapters/appendix}
 
-	% \pagebreak
+	\pagebreak
 
 	\printbibliography
 
