--- a/references.bib
+++ b/references.bib
@@ -115,6 +115,16 @@ url = {https://doi.org/10.1006/jcss.1997.1504},
   PAGES = {1-31},
   YEAR = {2016},
 }
+@article{geman1992neural,
+  title={Neural networks and the bias/variance dilemma},
+  author={Geman, Stuart and Bienenstock, Elie and Doursat, Ren{\'e}},
+  journal={Neural computation},
+  volume={4},
+  number={1},
+  pages={1--58},
+  year={1992},
+  publisher={MIT Press}
+}
 @phdthesis{geurts2002contributions,
   title={Contributions to decision tree induction: bias/variance tradeoff and time series classification},
   author={Geurts, Pierre},
