Proof-read up to decision tree

--- a/references.bib
+++ b/references.bib
@@ -126,7 +126,7 @@ url = {https://doi.org/10.1006/jcss.1997.1504},
   publisher={MIT Press}
 }
 @phdthesis{geurts2002contributions,
-  title={Contributions to decision tree induction: bias/variance tradeoff and time series classification},
+  title={Contributions to Decision Tree induction: bias/variance tradeoff and time series classification},
   author={Geurts, Pierre},
   year={2002},
   school={University of Li{\`e}ge Belgium}
